--- a/css/css.css
+++ b/css/css.css
@@ -41,9 +41,6 @@ body {
 }
 
 
-
-
-
 #personaje {
   width: 40px;
   height: 40px;
@@ -111,3 +108,38 @@ body {
 }
 
 
+/*
+#banderaMeta{
+  position: absolute;
+  top: 420px;
+ 
+  z-index: 2; 
+}
+#imagenPalo{
+
+  background-image: url('/images/paloPixelart.png');
+  background-size: cover;
+  z-index: 1;
+} 
+
+.placaSolar {
+  width: 50px;
+  height: 50px;
+  background-image: url('/images/placaSolar.png');
+  position: absolute;
+}
+
+.piedra {
+  width: 30px;
+  height: 30px;
+  background-image: url('/images/piedraPixelart.png');
+  position: absolute;
+}
+
+.palo {
+  width: 20px;
+  height: 80px;
+  background-image: url('/images/paloPixelart.png');
+  position: absolute;
+}
+*/
