--- a/css/css.css
+++ b/css/css.css
@@ -4,7 +4,7 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
-  background-image: url('/images/paisaje3.png');
+  background-image: url('/M12/L2/Kenia/images/paisaje3.png');
   background-size: cover;
 }
 
@@ -19,22 +19,147 @@ body {
   position: relative;
 
 }
+
 #malik{
   position: absolute;
   left: 73%;
-  top: 20%;
+  top: 28%;
 }
 #malikTexto{
   position: absolute;
-  left: 73%;
-  top: 15%;
+  left: 72%; 
+  top: 20%;
+  
+}
+ h1{
+  font-size:medium;
+  font-style: bold;
+ }
+h5{
+  font-size: large;
+  margin: 0%;
+} 
+#puntos {
+  height: 40px;
+  width: 300px;
+  background: transparent;
+  backdrop-filter: blur(10px);
+  align-items: center;
+  position: absolute;
+  top: 5%;
+  
+  padding: 1%;
+  display: flex;
+  flex-direction: column; /* Cambiado a columna */
+  /* Añadido espacio entre elementos */
+  align-items: center; /* Centrar elementos horizontalmente */
+}
+
+#titulo {
+  margin-bottom: 10px; /* Añadido espacio entre título y contenido */
+}
+
+#puntos-div {
+  display: flex;
+  flex-direction: row;
+  
+   
+}
+.puntosObjetos,
+.puntosVidas,
+.puntosTiempo {
+  margin-right: 5px;
+ margin-left: 5px;
+}
+#puntuacion-div {
+  display: flex;
+  flex-direction: row; 
+  text-align: center;
+  
+   
+}
+#puntuacionObjetos,
+#puntuacionVidas,
+#puntuacionTiempo {
+ margin-right: 25px;
+ margin-left: 25px;
   
 }
 
+
+/* Añadido estilo para cada tipo de punto */
+  
+
+
+
+
+/*OBJETOS
+.puntosObjetos{
+  position: absolute;
+  top:5%;
+  left: 35%;
+}
+#puntuacionObjetos{
+  position: absolute;
+  top: 11%;
+  left:35%;
+}
+/*VIDA
+.puntosVidas{
+  position: absolute;
+  top:5%;
+  left: 45%;
+}
+#puntuacionVidas{
+  position: absolute;
+  top: 11%;
+  left:45%;
+}
+/*TIEMPO
+.puntosTiempo{
+  position: absolute;
+  top:5%;
+  left: 55%;
+}
+#puntuacionTiempo{
+  position: absolute;
+  top: 11%;
+  left:55%;
+}
+
+
+/*TEMPORIZADOR*/
+#timer {
+  height: 40px;
+  width: 110px;
+  background: transparent;
+  backdrop-filter: blur(10px);
+  /*border: 2px solid black; */
+  display: flex;
+  flex-direction: column; /* Cambiado a columna */
+  align-items: center;
+  position: absolute;
+  top: 20%;
+  left: 20%;
+  padding: 1%;
+}
+
+/*
+.tiempo{
+  position: absolute;
+  top:20%;
+  left: 20%;
+}
+#temporizador{
+  position: absolute;
+  top: 26%;
+  left:19.5%;
+}
+*/
 .camino {
   height: 80px;
   width: 100px;
-  background-image: url('/images/camino.jpg');
+  background-image: url('/M12/L2/Kenia/images/camino.jpg');
   /*border: 1px solid black; QUITAR LUEGO*/
   z-index: 1;
   position: absolute;
@@ -71,12 +196,7 @@ body {
 
 
 /*INFORMACIÓN [POSICIÓN / CUADRANTE]*/
-#posicion {
-  top: 110%;
-  left: 10%;
-  position: absolute;
 
-}
 
 #cuadrante {
   top: 115%;
